# lifetracker

./: .env.example  .gitignore  Dockerfile  README.md  TECHNICAL_SPEC.md  docker-compose.yml  main.py  pyproject.toml  railway.toml
.claude/projects/-Users-danielgraviet-Desktop-projects-lifetracker/memory/: project_vibecheck.md
alpine/: README.md  build_dev.py  build_prod.py
api/: main.py
bot/: config.py  main.py  parser.py  scheduler.py  transcriber.py
core/: database.py  models.py
dashboard/: app.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
prompts/: parse_entry.txt  weekly_summary.txt
tests/fixtures/: ambiguous_sentiment.txt  simple_two_activities.txt  single_activity.txt
